--- a/china.html
+++ b/china.html
@@ -130,6 +130,8 @@
             kanj=kanj.replace(/あれ/g,"此")
             kanj=kanj.replace(/その/g,"其")
             kanj=kanj.replace(/それ/g,"其")
+            kanj=kanj.replace(/ですか/g,"可能")
+            kanj=kanj.replace(/ますか/g,"行")
             kanj=kanj.replace(/です/g,"也")
             kanj=kanj.replace(/ます/g,"也")
             kanj=kanj.replace(/ください/g,"希望")
@@ -156,6 +158,12 @@
             kanj=kanj.replace(/して/g,"実行")
             kanj=kanj.replace(/した/g,"実行")
             kanj=kanj.replace(/サッカー/g,"蹴球")
+            kanj=kanj.replace(/トイレ/g,"便所")
+            kanj=kanj.replace(/ホテル/g,"旅館")
+            kanj=kanj.replace(/だめ/g,"不可")
+            kanj=kanj.replace(/ダメ/g,"不可")
+            kanj=kanj.replace(/がとう/g,"難")
+            kanj=kanj.replace(/あり/g,"有")
             kanj=kanj.replace(/[\u3041-\u3096]/g,"")
             kanj=kanj.replace(/[\u30a1-\u30f6]/g,"")
             kanj=kanj.replace(/ー/g,"")
