--- a/china.html
+++ b/china.html
@@ -145,6 +145,7 @@
             kanj=kanj.replace(/なった/g,"成")
             kanj=kanj.replace(/なる/g,"成")
             kanj=kanj.replace(/なり/g,"成")
+            kanj=kanj.replace(/ナリ/g,"也")
             kanj=kanj.replace(/した/g,"了")
             kanj=kanj.replace(/され/g,"受")
             kanj=kanj.replace(/あなた/g,"貴方")
@@ -160,6 +161,9 @@
             kanj=kanj.replace(/サッカー/g,"蹴球")
             kanj=kanj.replace(/トイレ/g,"便所")
             kanj=kanj.replace(/ホテル/g,"旅館")
+            kanj=kanj.replace(/クラス/g,"教室")
+            kanj=kanj.replace(/チェンジ/g,"変更")
+            kanj=kanj.replace(/リアル/g,"現実")
             kanj=kanj.replace(/だめ/g,"不可")
             kanj=kanj.replace(/ダメ/g,"不可")
             kanj=kanj.replace(/がとう/g,"難")
