--- a/china.html
+++ b/china.html
@@ -168,6 +168,8 @@
             kanj=kanj.replace(/ダメ/g,"不可")
             kanj=kanj.replace(/がとう/g,"難")
             kanj=kanj.replace(/あり/g,"有")
+            kanj=kanj.replace(/ああ/g,"嗚呼")
+            kanj=kanj.replace(/そうだ/g,"了")
             kanj=kanj.replace(/[\u3041-\u3096]/g,"")
             kanj=kanj.replace(/[\u30a1-\u30f6]/g,"")
             kanj=kanj.replace(/ー/g,"")
