--- a/china.html
+++ b/china.html
@@ -138,7 +138,7 @@
             kanj=kanj.replace(/たい/g,"希望")
             kanj=kanj.replace(/しょう/g,"希望")
             kanj=kanj.replace(/ない/g,"不")
-            kanj=kanj.replace(/ので/g,"了、")
+            kanj=kanj.replace(/ので/g,"了")
             kanj=kanj.replace(/の/g,"的")
             kanj=kanj.replace(/な/g,"的")
             kanj=kanj.replace(/とても/g,"非常")
@@ -156,6 +156,9 @@
             kanj=kanj.replace(/分か/g,"理解")
             kanj=kanj.replace(/わか/g,"理解")
             kanj=kanj.replace(/する/g,"実行")
+            kanj=kanj.replace(/いる/g,"居")
+            kanj=kanj.replace(/いて/g,"居")
+            kanj=kanj.replace(/いた/g,"居")
             kanj=kanj.replace(/して/g,"実行")
             kanj=kanj.replace(/した/g,"実行")
             kanj=kanj.replace(/サッカー/g,"蹴球")
@@ -170,6 +173,7 @@
             kanj=kanj.replace(/あり/g,"有")
             kanj=kanj.replace(/ああ/g,"嗚呼")
             kanj=kanj.replace(/そうだ/g,"了")
+            kanj=kanj.replace(/おかし/g,"変")
             kanj=kanj.replace(/[\u3041-\u3096]/g,"")
             kanj=kanj.replace(/[\u30a1-\u30f6]/g,"")
             kanj=kanj.replace(/ー/g,"")
