--- a/china.html
+++ b/china.html
@@ -126,10 +126,16 @@
             var kanj = document.getElementById("kotae").value
             kanj=kanj.replace(/この/g,"此")
             kanj=kanj.replace(/これ/g,"此")
+            kanj=kanj.replace(/ここ/g,"此処")
             kanj=kanj.replace(/あの/g,"此")
             kanj=kanj.replace(/あれ/g,"此")
+            kanj=kanj.replace(/あそこ/g,"此処")
             kanj=kanj.replace(/その/g,"其")
             kanj=kanj.replace(/それ/g,"其")
+            kanj=kanj.replace(/そこ/g,"其処")
+            kanj=kanj.replace(/どれ/g,"何")
+            kanj=kanj.replace(/どの/g,"何")
+            kanj=kanj.replace(/どこ/g,"何処")
             kanj=kanj.replace(/ですか/g,"可能")
             kanj=kanj.replace(/ますか/g,"行")
             kanj=kanj.replace(/です/g,"也")
@@ -171,9 +177,12 @@
             kanj=kanj.replace(/ダメ/g,"不可")
             kanj=kanj.replace(/がとう/g,"難")
             kanj=kanj.replace(/あり/g,"有")
+            kanj=kanj.replace(/ある/g,"有")
+            kanj=kanj.replace(/あった/g,"有")
             kanj=kanj.replace(/ああ/g,"嗚呼")
             kanj=kanj.replace(/そうだ/g,"了")
             kanj=kanj.replace(/おかし/g,"変")
+            kanj=kanj.replace(/まず/g,"最初")
             kanj=kanj.replace(/[\u3041-\u3096]/g,"")
             kanj=kanj.replace(/[\u30a1-\u30f6]/g,"")
             kanj=kanj.replace(/ー/g,"")
