--- a/ha.html
+++ b/ha.html
@@ -124,7 +124,10 @@
             "やらしいな",
             "やめてくれ",
             "これからだ",
-            "塩こうじ"
+            "塩こうじ",
+            "エグザイル",
+            "皮むけて",
+            "ちょんまげで"
         ]
         naka=[
             "くるしい生活",
@@ -160,7 +163,9 @@
             "三歳児かな？",
             "間接キッスで",
             "本当の恋は",
-            "コント仕掛けの"
+            "コント仕掛けの",
+            "大人になって",
+            "歩いてみたら"
         ]
         simo=[
             "つらいです",
@@ -207,7 +212,10 @@
             "やめてくれ",
             "これからだ",
             "がんばろう",
-            "鈴木拓"
+            "鈴木拓",
+            "免許取る",
+            "捕まった",
+            "エグザイル"
         ]
         function haiku(){
             document.getElementById("k1").innerHTML=kami[Math.floor(Math.random() * kami.length)]
