--- a/bestnine.html
+++ b/bestnine.html
@@ -54,7 +54,7 @@
         border: 1px solid #aaa;
         -webkit-transition: all .3s;
         transition: all .3s;
-        width:10%;
+        width:100px;
         text-align:center;
         height:25px;
         font-size:20px;
