--- a/eitanbun.html
+++ b/eitanbun.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="なっかのう" />
-    <meta name="twitter:title" content="瞬間英単語" />
+    <meta name="twitter:title" content="瞬間英短文" />
     <meta name="twitter:description" content="英語力を向上するページです。" />
     <meta name="twitter:image" content="https://flashkorean.herokuapp.com/man.png" />
     <meta name="twitter:url" content="https://flashkorean.herokuapp.com/eitan.html" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>瞬間英単語</title>
+    <title>瞬間英短文</title>
     <style>
     body{
         margin: 20px;	/* bodyの外側の余白を指定する */
@@ -139,7 +139,7 @@
     </style>
 </head>
 <body>
-    <div class="Header">瞬間英単語<a href="hang.html" class="lin">瞬間韓単語</a></div>	
+    <div class="Header">瞬間英短文<a href="hang.html" class="lin">瞬間韓単語</a></div>	
     <div class="Contents">
         <div class="box11">
             <p>
@@ -156,9 +156,7 @@
                 レベル選択（左のリストから選択してください。）<br><br>
                 <select name="league" id="classes" onchange="teamSet()">
                     <option value="0">=ステージを選択=</option>
-                    <option value="1">Old-1</option>
-                    <option value="2">Old-2</option>
-                    <option value="1">class 1</option>
+                    <option value="1">class1</option>
                 </select>
                 <select id="level">
                 <option value="0">=========</option>
@@ -198,42 +196,11 @@
         </div>
     </div>
     <script>
-        let g_class=new Array(
-            "=Old-1=","レベル1(☆1)","レベル2(☆1)","レベル3(☆1)","レベル4(☆1)","レベル5(☆1)","レベル6(☆1)","レベル7(☆1)","レベル8(☆1)","レベル9(☆1)","レベル10(☆1)"
-        );
-
-        let f_class=new Array(
-            "=Old-2=","レベル11(☆2)","レベル12(☆2)","-","-","-","-","-","-","-","-"
-        );
         let class_1=new Array(
-            "=class 1=","レベル1(☆3)","レベル2(☆3)","-","-","-","-","-","-","-","-"
+            "=Old-1=","レベル1(☆1)","レベル2(未)","レベル3(未)","レベル4(未)","レベル5(未)","レベル6(未)","レベル7(未)","レベル8(未)","レベル9(未)","レベル10(未)"
         );
         let tango1=["午後","再び","年齢、年代","すべての","すでに","〜もまた","アメリカ合衆国","〜と、そして","怒った","りんご"]
         let tantan1=["afternoon","again","age","all","already","also","America","and","angry","apple"]
-        let tango2=["質問","インターネット","テレビ","わかりました、もちろん","パパ、お父さん","いくつかの、いくらかの","花","私の","誕生日","かわいらしい、すてきな"]
-        let tantan2=["question","internet","TV","sure","dad","some","flower","my","birthday","lovely"]
-        let tango3=["問題","医者","私は","持っている","薬","を開く、を始める","を閉める、閉じる、","どうぞ〜（して）ください","外へ、外出して","そこに"]
-        let tantan3=["problem","doctor","I","have","medicine","open","close","please","out","there"]
-        let tango4=["〜を打つ、〜を叩く","球、ボール","コーチ","〜できる","〜を許す、理由、言い訳","宿題","授業","レポート、報告、〜を報告する","〜を書く、書く","かまわない、すばらしい、元気な"]
-        let tantan4=["hit","ball","coach","can","excuse","homework","class","report","write","fine"]
-        let tango5=["やあ、こんにちは","を与える","私に","ジャケット、上着","冷たい、寒い","本当に","空腹で","喉が渇いた","何、どんなもの","朝食"]
-        let tantan5=["hi","give","me","jacket","cold","really","hungry","thirsty","what","breakfast"]
-        let tango6=["卵","とてもいい、偉大な","彼女は","今、現在","すてきな","旅行","家へ、家庭、家庭の","さようなら、別れの挨拶","この、これ","もっと、より多くの"]
-        let tantan6=["egg","great","she","now","nice","trip","home","goodbye","this","more"]
-        let tango7=["了解、わかりました","（電話で）もしもし、こんにちは","あっ、おや、まあ","電話をかける、〜を呼ぶ、電話","〜に感謝する","プレゼント","財布、ハンドバッグ","〜を与える、〜を送る","giveの過去形","giveの過去分詞"]
-        let tantan7=["OK","hello","oh","call","thank","present","purse","give","gave","given"]
-        let tango8=["callの過去形、過去分詞","お母さん、母親","だから、とても、そんなに、","働く","私のもの","ピザ","すばらしい、最高の","わくわくするような","である（be動詞の主語が三人称単数現在形の場合）","私たちの"]
-        let tantan8=["called","mother","so","work","mine","pizza","super","exciting","is","our"]
-        let tango9=["ダンス、踊り","をする、行う、する","バスケットボール","完全に、絶対に","学校","〜の間に","あなたの","才能","いつもは、通常は","漫画、アニメ"]
-        let tantan9=["dance","do","basketball","absolutely","school","during","your","talent","usually","cartoon"]
-        let tango10=["暇な、無料の、自由な","コンテスト、競技会","行く、通う","通り","左に","区画、大きな塊、ブロック","右","警察","助ける","眺め、景色、意見、見解"]
-        let tantan10=["free","contest","go","street","left","block","right","police","help","view"]
-        let tango11=["山","湖","澄んだ、晴れた","おそらく、たぶん","〜し続ける","起きる(2単語)","まだ、それでも","今日は、今日","眠い","それは、それを"]
-        let tantan11=["mountain","lake","clear","maybe","continue","wake up","still","today","sleepy","it"]
-        let tango12=["〜に遅れる(3単語)","起き上がる(2単語)","〜もまた、〜すぎる","お茶、紅茶","それから、それなら","である（主語がyouまたは複数の現在形）","おいしい","美味しそうに見える（2単語）","ハワイ","どの、どちらの"]
-        let tantan12=["be late for","get up","too","tea","then","are","delicious","look good","Hawaii","which"]
-        let tango21=["〜を助ける","〜を試す、やってみる","〜を保持する","（動植物が）育つ、生える","〜のように思える、見える","〜を楽しむ","〜を生み出す、創造する","〜を選ぶ","〜を費やす、使う","〜のように見える、思われる"]
-        let tantan21=["help","try","hold","grow","seem","enjoy","create","choose","spend","appear"]
         let tango=[]
         let tantan=[]
         let now = 0
@@ -254,8 +221,8 @@
                     return
             }else{
                     now=num2*10+num-10
-                    if(now==13||now==14||now==15||now==16||now==17||now==18||now==19||now==20||now>23){
-                        alert("現在、LV13~未実装です。")
+                    if(now>1){
+                        alert("現在、LV2~未実装です。")
                         return;
                     }
                     document.getElementById("box11").style.display = "block";
@@ -338,38 +305,20 @@
             if(i==tantan.length){
                 document.getElementById("monda").innerHTML="終了<br>正答数："+tantan.length+"問中"+seito+"問"
                 alert("終了！時間は"+PassSec/10+"秒でした")
-                if(now<200){
-                    score=10000-PassSec*9-(tantan.length-seito)*300
-                    let ran=""
-                    if(score>7500){
-                        ran="S"
-                    }else if(score>6000){
-                        ran="A"
-                    }else if(score>5000){
-                        ran="B"
-                    }else if(score>3500){
-                        ran="C"
-                    }else if(score>2000){
-                        ran="D"
-                    }else{
-                        ran="E"
-                    }
+                score=30000-PassSec*9-(tantan.length-seito)*300
+                let ran=""
+                if(score>22500){
+                    ran="S"
+                }else if(score>18000){
+                    ran="A"
+                }else if(score>15000){
+                    ran="B"
+                }else if(score>11500){
+                    ran="C"
+                }else if(score>6000){
+                    ran="D"
                 }else{
-                    score=30000-PassSec*9-(tantan.length-seito)*300
-                    let ran=""
-                    if(score>22500){
-                        ran="S"
-                    }else if(score>18000){
-                        ran="A"
-                    }else if(score>15000){
-                        ran="B"
-                    }else if(score>11500){
-                        ran="C"
-                    }else if(score>6000){
-                        ran="D"
-                    }else{
-                        ran="E"
-                    }
+                    ran="E"
                 }
 
                 alert("スコア："+score+"　あなたは"+ran+"ランクです！")
@@ -396,7 +345,7 @@
         function botan(){
             let num = document.getElementById("level").selectedIndex;
             let keisan = String(parseInt(cnt)+parseInt(seito))
-            openTwitter("☆瞬間英単語☆ 問題No."+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+keisan+"です！","https://flashkorean.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
+            openTwitter("☆瞬間英短文☆ 問題No."+now+"で"+tantan.length+"問中"+seito+"問正解しました！スコアは"+score+"です！","https://flashkorean.herokuapp.com/eitan.html","瞬間英短文","なっかのう");
         }
         function teamSet(){
 
@@ -406,9 +355,7 @@
             //選択したリーグによって分岐
                 switch (document.getElementById("classes").selectedIndex){
                         case 0: document.getElementById("level").options[i].text="";break;
-                        case 1: document.getElementById("level").options[i].text=g_class[i];break;
-                        case 2: document.getElementById("level").options[i].text=f_class[i];break;
-                        case 3: document.getElementById("level").options[i].text=class_1[i];break;
+                        case 1: document.getElementById("level").options[i].text=class_1[i];break;
                 }
             }
 
