--- a/eitan.html
+++ b/eitan.html
@@ -174,7 +174,7 @@
                 <option value="10"></option>
                 </select>
                 <input type="button" value="開始する" onclick="kantango();"><br>
-                ※固有名詞以外は小文字から始めてください。ピリオドはつけません。文字数は空白を含みます。<br>
+                ※固有名詞以外は小文字から始めてください。ピリオドはつけません。文字数は空白を含みます。[2]は単語数が２という意味です。<br>
                 <div id="twitter">
                         <a href="#" class="twitter" onclick="botan();">Twitter</a>
                 </div>
@@ -228,14 +228,16 @@
         let tantan9=["dance","do","basketball","absolutely","school","during","your","talent","usually","cartoon"]
         let tango10=["暇な、無料の、自由な","コンテスト、競技会","行く、通う","通り","左に","区画、大きな塊、ブロック","右","警察","助ける","眺め、景色、意見、見解"]
         let tantan10=["free","contest","go","street","left","block","right","police","help","view"]
-        let tango11=["山","湖","澄んだ、晴れた","おそらく、たぶん","〜し続ける","起きる(2単語)","まだ、それでも","今日は、今日","眠い","それは、それを"]
+        let tango11=["山","湖","澄んだ、晴れた","おそらく、たぶん","〜し続ける","起きる[2]","まだ、それでも","今日は、今日","眠い","それは、それを"]
         let tantan11=["mountain","lake","clear","maybe","continue","wake up","still","today","sleepy","it"]
-        let tango12=["〜に遅れる(3単語)","起き上がる(2単語)","〜もまた、〜すぎる","お茶、紅茶","それから、それなら","である（主語がyouまたは複数の現在形）","おいしい","美味しそうに見える（2単語）","ハワイ","どの、どちらの"]
+        let tango12=["〜に遅れる[3]","起き上がる[2]","〜もまた、〜すぎる","お茶、紅茶","それから、それなら","である（主語がyouまたは複数の現在形）","おいしい","美味しそうに見える（2単語）","ハワイ","どの、どちらの"]
         let tantan12=["be late for","get up","too","tea","then","are","delicious","look good","Hawaii","which"]
         let tango21=["〜を助ける","〜を試す、やってみる","〜を保持する","（動植物が）育つ、生える","〜のように思える、見える","〜を楽しむ","〜を生み出す、創造する","〜を選ぶ","〜を費やす、使う","〜に〜させてやる"]
         let tantan21=["help","try","hold","grow","seem","enjoy","create","choose","spend","let"]
-        let tango22=["〜を助ける","〜を試す、やってみる","〜を保持する","（動植物が）育つ、生える","〜のように思える、見える","〜を楽しむ","〜を生み出す、創造する","〜を選ぶ","〜を費やす、使う","〜に〜させてやる"]
-        let tantan22=["help","try","hold","grow","seem","enjoy","create","choose","spend","let"]
+        let tango22=["〜のように見える、思われる","横になる","うそをつく","着く、到着する","〜を発見する","行動する、役を果たす、演じる","上がる、高まる","〜を忘れる","〜をかける、ぶら下がる","（電話を）切る[2]"]
+        let tantan22=["appear","lie","lie","arrive","discover","act","rise","forget","hang","hang up"]
+        let tango23=["（ある場所で）過ごす、ぶらつく[2]","〜であれいいのにと思う","生まれる","＜競技・競争などに＞","","","","","",""]
+        let tantan23=["hang out","wish","born","win","","","","","",""]
         let tango=[]
         let tantan=[]
         let now = 0
@@ -257,7 +259,7 @@
                     return
             }else{
                     now=num2*10+num-10
-                    if(now==13||now==14||now==15||now==16||now==17||now==18||now==19||now==20||now>21){
+                    if(now==13||now==14||now==15||now==16||now==17||now==18||now==19||now==20||now>22){
                         alert("現在、LV13~未実装です。")
                         return;
                     }
@@ -379,7 +381,7 @@
         function botan(){
             let num = document.getElementById("level").selectedIndex;
             let keisan = String(parseInt(cnt)+parseInt(seito))
-            openTwitter("☆瞬間英単語☆ 問題No."+now+"で"+tantan.length+"問中"+seito+"問正解しました！現在の経験値は"+keisan+"です！","https://flashkorean.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
+            openTwitter("☆瞬間英単語☆ 問題No."+now+"で"+tantan.length+"問中"+seito+"問正解しました！スコアは"+score+"です！","https://flashkorean.herokuapp.com/eitan.html","瞬間英単語","なっかのう");
         }
         function teamSet(){
 
