--- a/eitan.html
+++ b/eitan.html
@@ -27,6 +27,7 @@
         background-color: #333333;	/* ヘッダーの背景色を指定する */
         color: #ffffff;	/* フォントの色を指定する */
         font-size:150%;
+        z-index: 1;
     }	
     .Contents {
         width: 100%;	/* コンテンツの横幅を指定する */
