--- a/chu.html
+++ b/chu.html
@@ -199,7 +199,7 @@
         let class_1=new Array(
             "=class-1=","レベル1(形容詞述語文)","レベル2(未)","レベル3(未)","レベル4(未)","レベル5(未)","レベル6(未)","レベル7(未)","レベル8(未)","レベル9(未)","レベル10(未)"
         );
-        let tango1=["今日はとても暑いです。","中国料理はとても美味しいです。","今日はとても寒いです。","昨日は暑くなかったです。","中国料理はそれほど美味しくないです。","今日は暑いですか？","中国料理は美味しいですか？","中国はとても大きいです。","私は背が高いです。","彼はそれほど背が高くないです。"]
+        let tango1=["今日はとても暑いです。","中国料理は非常に美味しいです。","今日はとても寒いです。","昨日は暑くなかったです。","中国料理はそれほど美味しくないです。","今日は暑いですか？","中国料理は美味しいですか？","中国はとても大きいです。","私は背が高いです。","彼はそれほど背が高くないです。"]
         let tantan1=["今天很热。","中国菜非常好吃。","今天很冷。","昨天不热。","中国菜不太好吃。","今天热吗？","中国菜好吃吗？","中国很大。","我很高。","他不太高。"]
         let tango=[]
         let tantan=[]
